// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TracingReport builds data file for JS files 1`] = `
"{
  \\"tables\\": [
    {
      \\"id\\": \\"2000001\\",
      \\"tests\\": [
        {
          \\"id\\": \\"2000001\\",
          \\"name\\": \\"A\\",
          \\"link\\": \\"../test/jest/testUnit.js#L3\\",
          \\"issues\\": [
            \\"TRACE-1001\\",
            \\"TRACE-1002\\"
          ],
          \\"shortLink\\": \\"testUnit.js\\",
          \\"type\\": \\"Unit\\"
        }
      ]
    },
    {
      \\"id\\": \\"1509100\\",
      \\"tests\\": [
        {
          \\"id\\": \\"1509100\\",
          \\"name\\": \\"This is a blackbox list\\\\n     1. thing 1\\\\n     2. thing 2\\\\n     3. *thing 3*\\\\n         4. thing 4\\",
          \\"link\\": \\"../test/jest/testBlackbox.js#L15\\",
          \\"issues\\": [
            \\"TRACE-1000\\"
          ],
          \\"shortLink\\": \\"testBlackbox.js\\",
          \\"type\\": \\"Blackbox\\"
        }
      ]
    },
    {
      \\"id\\": \\"1000001\\",
      \\"tests\\": [
        {
          \\"id\\": \\"1000001\\",
          \\"name\\": \\"A\\",
          \\"link\\": \\"../test/jest/testUnit.js#L3\\",
          \\"issues\\": [
            \\"TRACE-1001\\",
            \\"TRACE-1002\\"
          ],
          \\"shortLink\\": \\"testUnit.js\\",
          \\"type\\": \\"Unit\\"
        },
        {
          \\"id\\": \\"1000001\\",
          \\"name\\": \\"BB\\",
          \\"link\\": \\"../test/jest/testBlackbox.js#L15\\",
          \\"issues\\": [
            \\"TRACE-1000\\"
          ],
          \\"shortLink\\": \\"testBlackbox.js\\",
          \\"type\\": \\"Blackbox\\"
        },
        {
          \\"id\\": \\"1000001\\",
          \\"name\\": \\"EE\\",
          \\"link\\": \\"../test/jest/testBlackbox.js#L15\\",
          \\"issues\\": [
            \\"TRACE-1000\\"
          ],
          \\"shortLink\\": \\"testBlackbox.js\\",
          \\"type\\": \\"Blackbox\\"
        },
        {
          \\"id\\": \\"1000001\\",
          \\"name\\": \\"G\\",
          \\"link\\": \\"../test/jest/testWdio.js#L3\\",
          \\"issues\\": [
            \\"TRACE-1003\\"
          ],
          \\"shortLink\\": \\"testWdio.js\\",
          \\"type\\": \\"Graybox\\"
        },
        {
          \\"id\\": \\"1000001\\",
          \\"name\\": \\"I\\",
          \\"link\\": \\"../test/jest/testWdio.js#L3\\",
          \\"issues\\": [
            \\"TRACE-1002\\"
          ],
          \\"shortLink\\": \\"testWdio.js\\",
          \\"type\\": \\"Graybox\\"
        },
        {
          \\"id\\": \\"1000001\\",
          \\"name\\": \\"J\\",
          \\"link\\": \\"../test/jest/testWdio.js#L3\\",
          \\"issues\\": [
            \\"TRACE-1003\\"
          ],
          \\"shortLink\\": \\"testWdio.js\\",
          \\"type\\": \\"Graybox\\"
        },
        {
          \\"id\\": \\"1000001\\",
          \\"name\\": \\"K\\",
          \\"link\\": \\"../test/jest/testWdio.js#L3\\",
          \\"issues\\": [
            \\"TRACE-1002\\"
          ],
          \\"shortLink\\": \\"testWdio.js\\",
          \\"type\\": \\"Graybox\\"
        },
        {
          \\"id\\": \\"1000001\\",
          \\"name\\": \\"L\\",
          \\"link\\": \\"../test/jest/testWdio.js#L3\\",
          \\"issues\\": [
            \\"TRACE-1003\\"
          ],
          \\"shortLink\\": \\"testWdio.js\\",
          \\"type\\": \\"Graybox\\"
        }
      ]
    },
    {
      \\"id\\": \\"1000000\\",
      \\"tests\\": [
        {
          \\"id\\": \\"1000000\\",
          \\"name\\": \\"A\\",
          \\"link\\": \\"../test/jest/testUnit.js#L3\\",
          \\"issues\\": [
            \\"TRACE-1001\\",
            \\"TRACE-1002\\"
          ],
          \\"shortLink\\": \\"testUnit.js\\",
          \\"type\\": \\"Unit\\"
        },
        {
          \\"id\\": \\"1000000\\",
          \\"name\\": \\"AA\\",
          \\"link\\": \\"../test/jest/testBlackbox.js#L3\\",
          \\"issues\\": [
            \\"TRACE-1001\\",
            \\"TRACE-1002\\"
          ],
          \\"shortLink\\": \\"testBlackbox.js\\",
          \\"type\\": \\"Blackbox\\"
        },
        {
          \\"id\\": \\"1000000\\",
          \\"name\\": \\"C\\",
          \\"link\\": \\"../test/jest/testUnit.js#L3\\",
          \\"issues\\": [
            \\"TRACE-1001\\",
            \\"TRACE-1002\\"
          ],
          \\"shortLink\\": \\"testUnit.js\\",
          \\"type\\": \\"Unit\\"
        },
        {
          \\"id\\": \\"1000000\\",
          \\"name\\": \\"CC\\",
          \\"link\\": \\"../test/jest/testBlackbox.js#L3\\",
          \\"issues\\": [
            \\"TRACE-1001\\",
            \\"TRACE-1002\\"
          ],
          \\"shortLink\\": \\"testBlackbox.js\\",
          \\"type\\": \\"Blackbox\\"
        },
        {
          \\"id\\": \\"1000000\\",
          \\"name\\": \\"D\\",
          \\"link\\": \\"../test/jest/testUnit.js#L3\\",
          \\"issues\\": [
            \\"TRACE-1001\\",
            \\"TRACE-1002\\"
          ],
          \\"shortLink\\": \\"testUnit.js\\",
          \\"type\\": \\"Unit\\"
        },
        {
          \\"id\\": \\"1000000\\",
          \\"name\\": \\"DD\\",
          \\"link\\": \\"../test/jest/testBlackbox.js#L3\\",
          \\"issues\\": [
            \\"TRACE-1001\\",
            \\"TRACE-1002\\"
          ],
          \\"shortLink\\": \\"testBlackbox.js\\",
          \\"type\\": \\"Blackbox\\"
        },
        {
          \\"id\\": \\"1000000\\",
          \\"name\\": \\"F\\",
          \\"link\\": \\"../test/jest/testUnit.js#L3\\",
          \\"issues\\": [
            \\"TRACE-1001\\",
            \\"TRACE-1002\\"
          ],
          \\"shortLink\\": \\"testUnit.js\\",
          \\"type\\": \\"Unit\\"
        },
        {
          \\"id\\": \\"1000000\\",
          \\"name\\": \\"FF\\",
          \\"link\\": \\"../test/jest/testBlackbox.js#L3\\",
          \\"issues\\": [
            \\"TRACE-1001\\",
            \\"TRACE-1002\\"
          ],
          \\"shortLink\\": \\"testBlackbox.js\\",
          \\"type\\": \\"Blackbox\\"
        },
        {
          \\"id\\": \\"1000000\\",
          \\"name\\": \\"I\\",
          \\"link\\": \\"../test/jest/testWdio.js#L18\\",
          \\"issues\\": [
            \\"TRACE-1002\\"
          ],
          \\"shortLink\\": \\"testWdio.js\\",
          \\"type\\": \\"Graybox\\"
        }
      ]
    }
  ]
}"
`;

exports[`TracingReport builds data file for TS files 1`] = `
"{
  \\"tables\\": [
    {
      \\"id\\": \\"1509100\\",
      \\"tests\\": [
        {
          \\"id\\": \\"1509100\\",
          \\"name\\": \\"This is a blackbox list\\\\n     1. thing 1\\\\n     2. thing 2\\\\n     3. *thing 3*\\\\n         4. thing 4\\",
          \\"link\\": \\"../test/jest/testBlackbox.ts#L16\\",
          \\"issues\\": [
            \\"TRACE-1000\\"
          ],
          \\"shortLink\\": \\"testBlackbox.ts\\",
          \\"type\\": \\"Blackbox\\"
        },
        {
          \\"id\\": \\"1509100\\",
          \\"name\\": \\"This is a list\\\\n     1. thing 1\\\\n     2. thing 2\\\\n     3. *thing 3*\\\\n         4. thing 4\\",
          \\"link\\": \\"../test/jest/testUnit.ts#L16\\",
          \\"issues\\": [
            \\"TRACE-1000\\"
          ],
          \\"shortLink\\": \\"testUnit.ts\\",
          \\"type\\": \\"Unit\\"
        }
      ]
    },
    {
      \\"id\\": \\"1000001\\",
      \\"tests\\": [
        {
          \\"id\\": \\"1000001\\",
          \\"name\\": \\"B\\",
          \\"link\\": \\"../test/jest/testUnit.ts#L16\\",
          \\"issues\\": [
            \\"TRACE-1000\\"
          ],
          \\"shortLink\\": \\"testUnit.ts\\",
          \\"type\\": \\"Unit\\"
        },
        {
          \\"id\\": \\"1000001\\",
          \\"name\\": \\"BB\\",
          \\"link\\": \\"../test/jest/testBlackbox.ts#L16\\",
          \\"issues\\": [
            \\"TRACE-1000\\"
          ],
          \\"shortLink\\": \\"testBlackbox.ts\\",
          \\"type\\": \\"Blackbox\\"
        },
        {
          \\"id\\": \\"1000001\\",
          \\"name\\": \\"E\\",
          \\"link\\": \\"../test/jest/testUnit.ts#L16\\",
          \\"issues\\": [
            \\"TRACE-1000\\"
          ],
          \\"shortLink\\": \\"testUnit.ts\\",
          \\"type\\": \\"Unit\\"
        },
        {
          \\"id\\": \\"1000001\\",
          \\"name\\": \\"EE\\",
          \\"link\\": \\"../test/jest/testBlackbox.ts#L16\\",
          \\"issues\\": [
            \\"TRACE-1000\\"
          ],
          \\"shortLink\\": \\"testBlackbox.ts\\",
          \\"type\\": \\"Blackbox\\"
        },
        {
          \\"id\\": \\"1000001\\",
          \\"name\\": \\"G\\",
          \\"link\\": \\"../test/jest/testWdio.ts#L4\\",
          \\"issues\\": [
            \\"TRACE-1003\\"
          ],
          \\"shortLink\\": \\"testWdio.ts\\",
          \\"type\\": \\"Graybox\\"
        },
        {
          \\"id\\": \\"1000001\\",
          \\"name\\": \\"H\\",
          \\"link\\": \\"../test/jest/testWdio.ts#L4\\",
          \\"issues\\": [
            \\"TRACE-1003\\"
          ],
          \\"shortLink\\": \\"testWdio.ts\\",
          \\"type\\": \\"Graybox\\"
        },
        {
          \\"id\\": \\"1000001\\",
          \\"name\\": \\"I\\",
          \\"link\\": \\"../test/jest/testWdio.ts#L4\\",
          \\"issues\\": [
            \\"TRACE-1002\\"
          ],
          \\"shortLink\\": \\"testWdio.ts\\",
          \\"type\\": \\"Graybox\\"
        },
        {
          \\"id\\": \\"1000001\\",
          \\"name\\": \\"J\\",
          \\"link\\": \\"../test/jest/testWdio.ts#L4\\",
          \\"issues\\": [
            \\"TRACE-1003\\"
          ],
          \\"shortLink\\": \\"testWdio.ts\\",
          \\"type\\": \\"Graybox\\"
        },
        {
          \\"id\\": \\"1000001\\",
          \\"name\\": \\"K\\",
          \\"link\\": \\"../test/jest/testWdio.ts#L4\\",
          \\"issues\\": [
            \\"TRACE-1002\\"
          ],
          \\"shortLink\\": \\"testWdio.ts\\",
          \\"type\\": \\"Graybox\\"
        },
        {
          \\"id\\": \\"1000001\\",
          \\"name\\": \\"L\\",
          \\"link\\": \\"../test/jest/testWdio.ts#L4\\",
          \\"issues\\": [
            \\"TRACE-1003\\"
          ],
          \\"shortLink\\": \\"testWdio.ts\\",
          \\"type\\": \\"Graybox\\"
        }
      ]
    },
    {
      \\"id\\": \\"1000000\\",
      \\"tests\\": [
        {
          \\"id\\": \\"1000000\\",
          \\"name\\": \\"A\\",
          \\"link\\": \\"../test/jest/testUnit.ts#L4\\",
          \\"issues\\": [
            \\"TRACE-1001\\",
            \\"TRACE-1002\\"
          ],
          \\"shortLink\\": \\"testUnit.ts\\",
          \\"type\\": \\"Unit\\"
        },
        {
          \\"id\\": \\"1000000\\",
          \\"name\\": \\"AA\\",
          \\"link\\": \\"../test/jest/testBlackbox.ts#L4\\",
          \\"issues\\": [
            \\"TRACE-1001\\",
            \\"TRACE-1002\\"
          ],
          \\"shortLink\\": \\"testBlackbox.ts\\",
          \\"type\\": \\"Blackbox\\"
        },
        {
          \\"id\\": \\"1000000\\",
          \\"name\\": \\"C\\",
          \\"link\\": \\"../test/jest/testUnit.ts#L4\\",
          \\"issues\\": [
            \\"TRACE-1001\\",
            \\"TRACE-1002\\"
          ],
          \\"shortLink\\": \\"testUnit.ts\\",
          \\"type\\": \\"Unit\\"
        },
        {
          \\"id\\": \\"1000000\\",
          \\"name\\": \\"CC\\",
          \\"link\\": \\"../test/jest/testBlackbox.ts#L4\\",
          \\"issues\\": [
            \\"TRACE-1001\\",
            \\"TRACE-1002\\"
          ],
          \\"shortLink\\": \\"testBlackbox.ts\\",
          \\"type\\": \\"Blackbox\\"
        },
        {
          \\"id\\": \\"1000000\\",
          \\"name\\": \\"D\\",
          \\"link\\": \\"../test/jest/testUnit.ts#L4\\",
          \\"issues\\": [
            \\"TRACE-1001\\",
            \\"TRACE-1002\\"
          ],
          \\"shortLink\\": \\"testUnit.ts\\",
          \\"type\\": \\"Unit\\"
        },
        {
          \\"id\\": \\"1000000\\",
          \\"name\\": \\"DD\\",
          \\"link\\": \\"../test/jest/testBlackbox.ts#L4\\",
          \\"issues\\": [
            \\"TRACE-1001\\",
            \\"TRACE-1002\\"
          ],
          \\"shortLink\\": \\"testBlackbox.ts\\",
          \\"type\\": \\"Blackbox\\"
        },
        {
          \\"id\\": \\"1000000\\",
          \\"name\\": \\"F\\",
          \\"link\\": \\"../test/jest/testUnit.ts#L4\\",
          \\"issues\\": [
            \\"TRACE-1001\\",
            \\"TRACE-1002\\"
          ],
          \\"shortLink\\": \\"testUnit.ts\\",
          \\"type\\": \\"Unit\\"
        },
        {
          \\"id\\": \\"1000000\\",
          \\"name\\": \\"FF\\",
          \\"link\\": \\"../test/jest/testBlackbox.ts#L4\\",
          \\"issues\\": [
            \\"TRACE-1001\\",
            \\"TRACE-1002\\"
          ],
          \\"shortLink\\": \\"testBlackbox.ts\\",
          \\"type\\": \\"Blackbox\\"
        },
        {
          \\"id\\": \\"1000000\\",
          \\"name\\": \\"I\\",
          \\"link\\": \\"../test/jest/testWdio.ts#L19\\",
          \\"issues\\": [
            \\"TRACE-1002\\"
          ],
          \\"shortLink\\": \\"testWdio.ts\\",
          \\"type\\": \\"Graybox\\"
        },
        {
          \\"id\\": \\"1000000\\",
          \\"name\\": \\"K\\",
          \\"link\\": \\"../test/jest/testWdio.ts#L19\\",
          \\"issues\\": [
            \\"TRACE-1002\\"
          ],
          \\"shortLink\\": \\"testWdio.ts\\",
          \\"type\\": \\"Graybox\\"
        }
      ]
    }
  ]
}"
`;

exports[`TracingReport builds report for JS files 1`] = `
"# Tracing Report
#### Total: 19 (Unit: 6, Blackbox: 7, Graybox: 6)


### 2000001

| Name (1) | Link | Issue | Type |
| :--- | :---: | :---: | :---: |
| <h6>A</h6> | [testUnit.js](../test/jest/testUnit.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Unit |

<hr/>

### 1509100

| Name (1) | Link | Issue | Type |
| :--- | :---: | :---: | :---: |
| <h6>This is a blackbox list<br/>&nbsp;&nbsp;&nbsp;&nbsp; 1. thing 1<br/>&nbsp;&nbsp;&nbsp;&nbsp; 2. thing 2<br/>&nbsp;&nbsp;&nbsp;&nbsp; 3. \\\\*thing 3\\\\*<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 4. thing 4</h6> | [testBlackbox.js](../test/jest/testBlackbox.js#L15) | [TRACE-1000](https://jira2.cerner.com/browse/TRACE-1000) | Blackbox |

<hr/>

### 1000001

| Name (8) | Link | Issue | Type |
| :--- | :---: | :---: | :---: |
| <h6>A</h6> | [testUnit.js](../test/jest/testUnit.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Unit |
| <h6>BB</h6> | [testBlackbox.js](../test/jest/testBlackbox.js#L15) | [TRACE-1000](https://jira2.cerner.com/browse/TRACE-1000) | Blackbox |
| <h6>EE</h6> | [testBlackbox.js](../test/jest/testBlackbox.js#L15) | [TRACE-1000](https://jira2.cerner.com/browse/TRACE-1000) | Blackbox |
| <h6>G</h6> | [testWdio.js](../test/jest/testWdio.js#L3) | [TRACE-1003](https://jira2.cerner.com/browse/TRACE-1003) | Graybox |
| <h6>I</h6> | [testWdio.js](../test/jest/testWdio.js#L3) | [TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Graybox |
| <h6>J</h6> | [testWdio.js](../test/jest/testWdio.js#L3) | [TRACE-1003](https://jira2.cerner.com/browse/TRACE-1003) | Graybox |
| <h6>K</h6> | [testWdio.js](../test/jest/testWdio.js#L3) | [TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Graybox |
| <h6>L</h6> | [testWdio.js](../test/jest/testWdio.js#L3) | [TRACE-1003](https://jira2.cerner.com/browse/TRACE-1003) | Graybox |

<hr/>

### 1000000

| Name (9) | Link | Issue | Type |
| :--- | :---: | :---: | :---: |
| <h6>A</h6> | [testUnit.js](../test/jest/testUnit.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Unit |
| <h6>AA</h6> | [testBlackbox.js](../test/jest/testBlackbox.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Blackbox |
| <h6>C</h6> | [testUnit.js](../test/jest/testUnit.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Unit |
| <h6>CC</h6> | [testBlackbox.js](../test/jest/testBlackbox.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Blackbox |
| <h6>D</h6> | [testUnit.js](../test/jest/testUnit.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Unit |
| <h6>DD</h6> | [testBlackbox.js](../test/jest/testBlackbox.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Blackbox |
| <h6>F</h6> | [testUnit.js](../test/jest/testUnit.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Unit |
| <h6>FF</h6> | [testBlackbox.js](../test/jest/testBlackbox.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Blackbox |
| <h6>I</h6> | [testWdio.js](../test/jest/testWdio.js#L18) | [TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Graybox |

<hr/>"
`;

exports[`TracingReport builds report for TS files 1`] = `
"# Tracing Report
#### Total: 22 (Blackbox: 7, Unit: 7, Graybox: 8)


### 1509100

| Name (2) | Link | Issue | Type |
| :--- | :---: | :---: | :---: |
| <h6>This is a blackbox list<br/>&nbsp;&nbsp;&nbsp;&nbsp; 1. thing 1<br/>&nbsp;&nbsp;&nbsp;&nbsp; 2. thing 2<br/>&nbsp;&nbsp;&nbsp;&nbsp; 3. \\\\*thing 3\\\\*<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 4. thing 4</h6> | [testBlackbox.ts](../test/jest/testBlackbox.ts#L16) | [TRACE-1000](https://jira2.cerner.com/browse/TRACE-1000) | Blackbox |
| <h6>This is a list<br/>&nbsp;&nbsp;&nbsp;&nbsp; 1. thing 1<br/>&nbsp;&nbsp;&nbsp;&nbsp; 2. thing 2<br/>&nbsp;&nbsp;&nbsp;&nbsp; 3. \\\\*thing 3\\\\*<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 4. thing 4</h6> | [testUnit.ts](../test/jest/testUnit.ts#L16) | [TRACE-1000](https://jira2.cerner.com/browse/TRACE-1000) | Unit |

<hr/>

### 1000001

| Name (10) | Link | Issue | Type |
| :--- | :---: | :---: | :---: |
| <h6>B</h6> | [testUnit.ts](../test/jest/testUnit.ts#L16) | [TRACE-1000](https://jira2.cerner.com/browse/TRACE-1000) | Unit |
| <h6>BB</h6> | [testBlackbox.ts](../test/jest/testBlackbox.ts#L16) | [TRACE-1000](https://jira2.cerner.com/browse/TRACE-1000) | Blackbox |
| <h6>E</h6> | [testUnit.ts](../test/jest/testUnit.ts#L16) | [TRACE-1000](https://jira2.cerner.com/browse/TRACE-1000) | Unit |
| <h6>EE</h6> | [testBlackbox.ts](../test/jest/testBlackbox.ts#L16) | [TRACE-1000](https://jira2.cerner.com/browse/TRACE-1000) | Blackbox |
| <h6>G</h6> | [testWdio.ts](../test/jest/testWdio.ts#L4) | [TRACE-1003](https://jira2.cerner.com/browse/TRACE-1003) | Graybox |
| <h6>H</h6> | [testWdio.ts](../test/jest/testWdio.ts#L4) | [TRACE-1003](https://jira2.cerner.com/browse/TRACE-1003) | Graybox |
| <h6>I</h6> | [testWdio.ts](../test/jest/testWdio.ts#L4) | [TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Graybox |
| <h6>J</h6> | [testWdio.ts](../test/jest/testWdio.ts#L4) | [TRACE-1003](https://jira2.cerner.com/browse/TRACE-1003) | Graybox |
| <h6>K</h6> | [testWdio.ts](../test/jest/testWdio.ts#L4) | [TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Graybox |
| <h6>L</h6> | [testWdio.ts](../test/jest/testWdio.ts#L4) | [TRACE-1003](https://jira2.cerner.com/browse/TRACE-1003) | Graybox |

<hr/>

### 1000000

| Name (10) | Link | Issue | Type |
| :--- | :---: | :---: | :---: |
| <h6>A</h6> | [testUnit.ts](../test/jest/testUnit.ts#L4) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Unit |
| <h6>AA</h6> | [testBlackbox.ts](../test/jest/testBlackbox.ts#L4) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Blackbox |
| <h6>C</h6> | [testUnit.ts](../test/jest/testUnit.ts#L4) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Unit |
| <h6>CC</h6> | [testBlackbox.ts](../test/jest/testBlackbox.ts#L4) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Blackbox |
| <h6>D</h6> | [testUnit.ts](../test/jest/testUnit.ts#L4) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Unit |
| <h6>DD</h6> | [testBlackbox.ts](../test/jest/testBlackbox.ts#L4) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Blackbox |
| <h6>F</h6> | [testUnit.ts](../test/jest/testUnit.ts#L4) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Unit |
| <h6>FF</h6> | [testBlackbox.ts](../test/jest/testBlackbox.ts#L4) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Blackbox |
| <h6>I</h6> | [testWdio.ts](../test/jest/testWdio.ts#L19) | [TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Graybox |
| <h6>K</h6> | [testWdio.ts](../test/jest/testWdio.ts#L19) | [TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Graybox |

<hr/>"
`;

exports[`TracingReport filters by issues 1`] = `
"# Tracing Report
#### Total: 10 (Unit: 6, Blackbox: 4)


### 2000001

| Name (1) | Link | Issue | Type |
| :--- | :---: | :---: | :---: |
| <h6>A</h6> | [testUnit.js](../test/jest/testUnit.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Unit |

<hr/>

### 1000001

| Name (1) | Link | Issue | Type |
| :--- | :---: | :---: | :---: |
| <h6>A</h6> | [testUnit.js](../test/jest/testUnit.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Unit |

<hr/>

### 1000000

| Name (8) | Link | Issue | Type |
| :--- | :---: | :---: | :---: |
| <h6>A</h6> | [testUnit.js](../test/jest/testUnit.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Unit |
| <h6>AA</h6> | [testBlackbox.js](../test/jest/testBlackbox.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Blackbox |
| <h6>C</h6> | [testUnit.js](../test/jest/testUnit.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Unit |
| <h6>CC</h6> | [testBlackbox.js](../test/jest/testBlackbox.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Blackbox |
| <h6>D</h6> | [testUnit.js](../test/jest/testUnit.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Unit |
| <h6>DD</h6> | [testBlackbox.js](../test/jest/testBlackbox.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Blackbox |
| <h6>F</h6> | [testUnit.js](../test/jest/testUnit.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Unit |
| <h6>FF</h6> | [testBlackbox.js](../test/jest/testBlackbox.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Blackbox |

<hr/>"
`;

exports[`TracingReport only considers test blocks with the specified name 1`] = `
"# Tracing Report
#### Total: 3 (Unit: 3)


### 1509100

| Name (1) | Link | Issue | Type |
| :--- | :---: | :---: | :---: |
| <h6>This is a list<br/>&nbsp;&nbsp;&nbsp;&nbsp; 1. thing 1<br/>&nbsp;&nbsp;&nbsp;&nbsp; 2. thing 2<br/>&nbsp;&nbsp;&nbsp;&nbsp; 3. \\\\*thing 3\\\\*<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 4. thing 4</h6> | [testUnit.js](../test/jest/testUnit.js#L15) | N/A | Unit |

<hr/>

### 1000001

| Name (2) | Link | Issue | Type |
| :--- | :---: | :---: | :---: |
| <h6>B</h6> | [testUnit.js](../test/jest/testUnit.js#L15) | N/A | Unit |
| <h6>E</h6> | [testUnit.js](../test/jest/testUnit.js#L15) | N/A | Unit |

<hr/>"
`;

exports[`TracingReport only considers test plans in the specified file globs 1`] = `
"# Tracing Report
#### Total: 0 ()
"
`;

exports[`TracingReport only considers test plans with the specified tag 1`] = `
"# Tracing Report
#### Total: 2 (Graybox: 2)


### 1000001

| Name (1) | Link | Issue | Type |
| :--- | :---: | :---: | :---: |
| <h6>H</h6> | [testWdio.js](../test/jest/testWdio.js#L3) | [TRACE-1003](https://jira2.cerner.com/browse/TRACE-1003) | Graybox |

<hr/>

### 1000000

| Name (1) | Link | Issue | Type |
| :--- | :---: | :---: | :---: |
| <h6>K</h6> | [testWdio.js](../test/jest/testWdio.js#L18) | [TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Graybox |

<hr/>"
`;

exports[`TracingReport only populates the issue column for tests with the specified issue tag 1`] = `
"# Tracing Report
#### Total: 19 (Unit: 6, Blackbox: 7, Graybox: 6)


### 2000001

| Name (1) | Link | Issue | Type |
| :--- | :---: | :---: | :---: |
| <h6>A</h6> | [testUnit.js](../test/jest/testUnit.js#L3) | N/A | Unit |

<hr/>

### 1509100

| Name (1) | Link | Issue | Type |
| :--- | :---: | :---: | :---: |
| <h6>This is a blackbox list<br/>&nbsp;&nbsp;&nbsp;&nbsp; 1. thing 1<br/>&nbsp;&nbsp;&nbsp;&nbsp; 2. thing 2<br/>&nbsp;&nbsp;&nbsp;&nbsp; 3. \\\\*thing 3\\\\*<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 4. thing 4</h6> | [testBlackbox.js](../test/jest/testBlackbox.js#L15) | N/A | Blackbox |

<hr/>

### 1000001

| Name (8) | Link | Issue | Type |
| :--- | :---: | :---: | :---: |
| <h6>A</h6> | [testUnit.js](../test/jest/testUnit.js#L3) | N/A | Unit |
| <h6>BB</h6> | [testBlackbox.js](../test/jest/testBlackbox.js#L15) | N/A | Blackbox |
| <h6>EE</h6> | [testBlackbox.js](../test/jest/testBlackbox.js#L15) | N/A | Blackbox |
| <h6>G</h6> | [testWdio.js](../test/jest/testWdio.js#L3) | N/A | Graybox |
| <h6>I</h6> | [testWdio.js](../test/jest/testWdio.js#L3) | N/A | Graybox |
| <h6>J</h6> | [testWdio.js](../test/jest/testWdio.js#L3) | N/A | Graybox |
| <h6>K</h6> | [testWdio.js](../test/jest/testWdio.js#L3) | N/A | Graybox |
| <h6>L</h6> | [testWdio.js](../test/jest/testWdio.js#L3) | N/A | Graybox |

<hr/>

### 1000000

| Name (9) | Link | Issue | Type |
| :--- | :---: | :---: | :---: |
| <h6>A</h6> | [testUnit.js](../test/jest/testUnit.js#L3) | N/A | Unit |
| <h6>AA</h6> | [testBlackbox.js](../test/jest/testBlackbox.js#L3) | N/A | Blackbox |
| <h6>C</h6> | [testUnit.js](../test/jest/testUnit.js#L3) | N/A | Unit |
| <h6>CC</h6> | [testBlackbox.js](../test/jest/testBlackbox.js#L3) | N/A | Blackbox |
| <h6>D</h6> | [testUnit.js](../test/jest/testUnit.js#L3) | N/A | Unit |
| <h6>DD</h6> | [testBlackbox.js](../test/jest/testBlackbox.js#L3) | N/A | Blackbox |
| <h6>F</h6> | [testUnit.js](../test/jest/testUnit.js#L3) | N/A | Unit |
| <h6>FF</h6> | [testBlackbox.js](../test/jest/testBlackbox.js#L3) | N/A | Blackbox |
| <h6>I</h6> | [testWdio.js](../test/jest/testWdio.js#L18) | N/A | Graybox |

<hr/>"
`;

exports[`TracingReport prepends issues with issueHost 1`] = `
"# Tracing Report
#### Total: 19 (Unit: 6, Blackbox: 7, Graybox: 6)


### 2000001

| Name (1) | Link | Issue | Type |
| :--- | :---: | :---: | :---: |
| <h6>A</h6> | [testUnit.js](../test/jest/testUnit.js#L3) | [TRACE-1001](http://google.comTRACE-1001)<br/>[TRACE-1002](http://google.comTRACE-1002) | Unit |

<hr/>

### 1509100

| Name (1) | Link | Issue | Type |
| :--- | :---: | :---: | :---: |
| <h6>This is a blackbox list<br/>&nbsp;&nbsp;&nbsp;&nbsp; 1. thing 1<br/>&nbsp;&nbsp;&nbsp;&nbsp; 2. thing 2<br/>&nbsp;&nbsp;&nbsp;&nbsp; 3. \\\\*thing 3\\\\*<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 4. thing 4</h6> | [testBlackbox.js](../test/jest/testBlackbox.js#L15) | [TRACE-1000](http://google.comTRACE-1000) | Blackbox |

<hr/>

### 1000001

| Name (8) | Link | Issue | Type |
| :--- | :---: | :---: | :---: |
| <h6>A</h6> | [testUnit.js](../test/jest/testUnit.js#L3) | [TRACE-1001](http://google.comTRACE-1001)<br/>[TRACE-1002](http://google.comTRACE-1002) | Unit |
| <h6>BB</h6> | [testBlackbox.js](../test/jest/testBlackbox.js#L15) | [TRACE-1000](http://google.comTRACE-1000) | Blackbox |
| <h6>EE</h6> | [testBlackbox.js](../test/jest/testBlackbox.js#L15) | [TRACE-1000](http://google.comTRACE-1000) | Blackbox |
| <h6>G</h6> | [testWdio.js](../test/jest/testWdio.js#L3) | [TRACE-1003](http://google.comTRACE-1003) | Graybox |
| <h6>I</h6> | [testWdio.js](../test/jest/testWdio.js#L3) | [TRACE-1002](http://google.comTRACE-1002) | Graybox |
| <h6>J</h6> | [testWdio.js](../test/jest/testWdio.js#L3) | [TRACE-1003](http://google.comTRACE-1003) | Graybox |
| <h6>K</h6> | [testWdio.js](../test/jest/testWdio.js#L3) | [TRACE-1002](http://google.comTRACE-1002) | Graybox |
| <h6>L</h6> | [testWdio.js](../test/jest/testWdio.js#L3) | [TRACE-1003](http://google.comTRACE-1003) | Graybox |

<hr/>

### 1000000

| Name (9) | Link | Issue | Type |
| :--- | :---: | :---: | :---: |
| <h6>A</h6> | [testUnit.js](../test/jest/testUnit.js#L3) | [TRACE-1001](http://google.comTRACE-1001)<br/>[TRACE-1002](http://google.comTRACE-1002) | Unit |
| <h6>AA</h6> | [testBlackbox.js](../test/jest/testBlackbox.js#L3) | [TRACE-1001](http://google.comTRACE-1001)<br/>[TRACE-1002](http://google.comTRACE-1002) | Blackbox |
| <h6>C</h6> | [testUnit.js](../test/jest/testUnit.js#L3) | [TRACE-1001](http://google.comTRACE-1001)<br/>[TRACE-1002](http://google.comTRACE-1002) | Unit |
| <h6>CC</h6> | [testBlackbox.js](../test/jest/testBlackbox.js#L3) | [TRACE-1001](http://google.comTRACE-1001)<br/>[TRACE-1002](http://google.comTRACE-1002) | Blackbox |
| <h6>D</h6> | [testUnit.js](../test/jest/testUnit.js#L3) | [TRACE-1001](http://google.comTRACE-1001)<br/>[TRACE-1002](http://google.comTRACE-1002) | Unit |
| <h6>DD</h6> | [testBlackbox.js](../test/jest/testBlackbox.js#L3) | [TRACE-1001](http://google.comTRACE-1001)<br/>[TRACE-1002](http://google.comTRACE-1002) | Blackbox |
| <h6>F</h6> | [testUnit.js](../test/jest/testUnit.js#L3) | [TRACE-1001](http://google.comTRACE-1001)<br/>[TRACE-1002](http://google.comTRACE-1002) | Unit |
| <h6>FF</h6> | [testBlackbox.js](../test/jest/testBlackbox.js#L3) | [TRACE-1001](http://google.comTRACE-1001)<br/>[TRACE-1002](http://google.comTRACE-1002) | Blackbox |
| <h6>I</h6> | [testWdio.js](../test/jest/testWdio.js#L18) | [TRACE-1002](http://google.comTRACE-1002) | Graybox |

<hr/>"
`;

exports[`TracingReport sorts by issues 1`] = `
"# Tracing Report
#### Total: 19 (Unit: 6, Blackbox: 7, Graybox: 6)


### 2000001

| Name (1) | Link | Issue | Type |
| :--- | :---: | :---: | :---: |
| <h6>A</h6> | [testUnit.js](../test/jest/testUnit.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Unit |

<hr/>

### 1509100

| Name (1) | Link | Issue | Type |
| :--- | :---: | :---: | :---: |
| <h6>This is a blackbox list<br/>&nbsp;&nbsp;&nbsp;&nbsp; 1. thing 1<br/>&nbsp;&nbsp;&nbsp;&nbsp; 2. thing 2<br/>&nbsp;&nbsp;&nbsp;&nbsp; 3. \\\\*thing 3\\\\*<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 4. thing 4</h6> | [testBlackbox.js](../test/jest/testBlackbox.js#L15) | [TRACE-1000](https://jira2.cerner.com/browse/TRACE-1000) | Blackbox |

<hr/>

### 1000001

| Name (8) | Link | Issue | Type |
| :--- | :---: | :---: | :---: |
| <h6>BB</h6> | [testBlackbox.js](../test/jest/testBlackbox.js#L15) | [TRACE-1000](https://jira2.cerner.com/browse/TRACE-1000) | Blackbox |
| <h6>EE</h6> | [testBlackbox.js](../test/jest/testBlackbox.js#L15) | [TRACE-1000](https://jira2.cerner.com/browse/TRACE-1000) | Blackbox |
| <h6>A</h6> | [testUnit.js](../test/jest/testUnit.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Unit |
| <h6>I</h6> | [testWdio.js](../test/jest/testWdio.js#L3) | [TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Graybox |
| <h6>K</h6> | [testWdio.js](../test/jest/testWdio.js#L3) | [TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Graybox |
| <h6>G</h6> | [testWdio.js](../test/jest/testWdio.js#L3) | [TRACE-1003](https://jira2.cerner.com/browse/TRACE-1003) | Graybox |
| <h6>J</h6> | [testWdio.js](../test/jest/testWdio.js#L3) | [TRACE-1003](https://jira2.cerner.com/browse/TRACE-1003) | Graybox |
| <h6>L</h6> | [testWdio.js](../test/jest/testWdio.js#L3) | [TRACE-1003](https://jira2.cerner.com/browse/TRACE-1003) | Graybox |

<hr/>

### 1000000

| Name (9) | Link | Issue | Type |
| :--- | :---: | :---: | :---: |
| <h6>A</h6> | [testUnit.js](../test/jest/testUnit.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Unit |
| <h6>AA</h6> | [testBlackbox.js](../test/jest/testBlackbox.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Blackbox |
| <h6>C</h6> | [testUnit.js](../test/jest/testUnit.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Unit |
| <h6>CC</h6> | [testBlackbox.js](../test/jest/testBlackbox.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Blackbox |
| <h6>D</h6> | [testUnit.js](../test/jest/testUnit.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Unit |
| <h6>DD</h6> | [testBlackbox.js](../test/jest/testBlackbox.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Blackbox |
| <h6>F</h6> | [testUnit.js](../test/jest/testUnit.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Unit |
| <h6>FF</h6> | [testBlackbox.js](../test/jest/testBlackbox.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Blackbox |
| <h6>I</h6> | [testWdio.js](../test/jest/testWdio.js#L18) | [TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Graybox |

<hr/>"
`;

exports[`TracingReport sorts by link 1`] = `
"# Tracing Report
#### Total: 19 (Unit: 6, Blackbox: 7, Graybox: 6)


### 2000001

| Name (1) | Link | Issue | Type |
| :--- | :---: | :---: | :---: |
| <h6>A</h6> | [testUnit.js](../test/jest/testUnit.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Unit |

<hr/>

### 1509100

| Name (1) | Link | Issue | Type |
| :--- | :---: | :---: | :---: |
| <h6>This is a blackbox list<br/>&nbsp;&nbsp;&nbsp;&nbsp; 1. thing 1<br/>&nbsp;&nbsp;&nbsp;&nbsp; 2. thing 2<br/>&nbsp;&nbsp;&nbsp;&nbsp; 3. \\\\*thing 3\\\\*<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 4. thing 4</h6> | [testBlackbox.js](../test/jest/testBlackbox.js#L15) | [TRACE-1000](https://jira2.cerner.com/browse/TRACE-1000) | Blackbox |

<hr/>

### 1000001

| Name (8) | Link | Issue | Type |
| :--- | :---: | :---: | :---: |
| <h6>BB</h6> | [testBlackbox.js](../test/jest/testBlackbox.js#L15) | [TRACE-1000](https://jira2.cerner.com/browse/TRACE-1000) | Blackbox |
| <h6>EE</h6> | [testBlackbox.js](../test/jest/testBlackbox.js#L15) | [TRACE-1000](https://jira2.cerner.com/browse/TRACE-1000) | Blackbox |
| <h6>A</h6> | [testUnit.js](../test/jest/testUnit.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Unit |
| <h6>G</h6> | [testWdio.js](../test/jest/testWdio.js#L3) | [TRACE-1003](https://jira2.cerner.com/browse/TRACE-1003) | Graybox |
| <h6>I</h6> | [testWdio.js](../test/jest/testWdio.js#L3) | [TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Graybox |
| <h6>J</h6> | [testWdio.js](../test/jest/testWdio.js#L3) | [TRACE-1003](https://jira2.cerner.com/browse/TRACE-1003) | Graybox |
| <h6>K</h6> | [testWdio.js](../test/jest/testWdio.js#L3) | [TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Graybox |
| <h6>L</h6> | [testWdio.js](../test/jest/testWdio.js#L3) | [TRACE-1003](https://jira2.cerner.com/browse/TRACE-1003) | Graybox |

<hr/>

### 1000000

| Name (9) | Link | Issue | Type |
| :--- | :---: | :---: | :---: |
| <h6>AA</h6> | [testBlackbox.js](../test/jest/testBlackbox.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Blackbox |
| <h6>CC</h6> | [testBlackbox.js](../test/jest/testBlackbox.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Blackbox |
| <h6>DD</h6> | [testBlackbox.js](../test/jest/testBlackbox.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Blackbox |
| <h6>FF</h6> | [testBlackbox.js](../test/jest/testBlackbox.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Blackbox |
| <h6>A</h6> | [testUnit.js](../test/jest/testUnit.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Unit |
| <h6>C</h6> | [testUnit.js](../test/jest/testUnit.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Unit |
| <h6>D</h6> | [testUnit.js](../test/jest/testUnit.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Unit |
| <h6>F</h6> | [testUnit.js](../test/jest/testUnit.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Unit |
| <h6>I</h6> | [testWdio.js](../test/jest/testWdio.js#L18) | [TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Graybox |

<hr/>"
`;

exports[`TracingReport sorts by name 1`] = `
"# Tracing Report
#### Total: 19 (Unit: 6, Blackbox: 7, Graybox: 6)


### 2000001

| Name (1) | Link | Issue | Type |
| :--- | :---: | :---: | :---: |
| <h6>A</h6> | [testUnit.js](../test/jest/testUnit.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Unit |

<hr/>

### 1509100

| Name (1) | Link | Issue | Type |
| :--- | :---: | :---: | :---: |
| <h6>This is a blackbox list<br/>&nbsp;&nbsp;&nbsp;&nbsp; 1. thing 1<br/>&nbsp;&nbsp;&nbsp;&nbsp; 2. thing 2<br/>&nbsp;&nbsp;&nbsp;&nbsp; 3. \\\\*thing 3\\\\*<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 4. thing 4</h6> | [testBlackbox.js](../test/jest/testBlackbox.js#L15) | [TRACE-1000](https://jira2.cerner.com/browse/TRACE-1000) | Blackbox |

<hr/>

### 1000001

| Name (8) | Link | Issue | Type |
| :--- | :---: | :---: | :---: |
| <h6>A</h6> | [testUnit.js](../test/jest/testUnit.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Unit |
| <h6>BB</h6> | [testBlackbox.js](../test/jest/testBlackbox.js#L15) | [TRACE-1000](https://jira2.cerner.com/browse/TRACE-1000) | Blackbox |
| <h6>EE</h6> | [testBlackbox.js](../test/jest/testBlackbox.js#L15) | [TRACE-1000](https://jira2.cerner.com/browse/TRACE-1000) | Blackbox |
| <h6>G</h6> | [testWdio.js](../test/jest/testWdio.js#L3) | [TRACE-1003](https://jira2.cerner.com/browse/TRACE-1003) | Graybox |
| <h6>I</h6> | [testWdio.js](../test/jest/testWdio.js#L3) | [TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Graybox |
| <h6>J</h6> | [testWdio.js](../test/jest/testWdio.js#L3) | [TRACE-1003](https://jira2.cerner.com/browse/TRACE-1003) | Graybox |
| <h6>K</h6> | [testWdio.js](../test/jest/testWdio.js#L3) | [TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Graybox |
| <h6>L</h6> | [testWdio.js](../test/jest/testWdio.js#L3) | [TRACE-1003](https://jira2.cerner.com/browse/TRACE-1003) | Graybox |

<hr/>

### 1000000

| Name (9) | Link | Issue | Type |
| :--- | :---: | :---: | :---: |
| <h6>A</h6> | [testUnit.js](../test/jest/testUnit.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Unit |
| <h6>AA</h6> | [testBlackbox.js](../test/jest/testBlackbox.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Blackbox |
| <h6>C</h6> | [testUnit.js](../test/jest/testUnit.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Unit |
| <h6>CC</h6> | [testBlackbox.js](../test/jest/testBlackbox.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Blackbox |
| <h6>D</h6> | [testUnit.js](../test/jest/testUnit.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Unit |
| <h6>DD</h6> | [testBlackbox.js](../test/jest/testBlackbox.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Blackbox |
| <h6>F</h6> | [testUnit.js](../test/jest/testUnit.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Unit |
| <h6>FF</h6> | [testBlackbox.js](../test/jest/testBlackbox.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Blackbox |
| <h6>I</h6> | [testWdio.js](../test/jest/testWdio.js#L18) | [TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Graybox |

<hr/>"
`;

exports[`TracingReport sorts by type 1`] = `
"# Tracing Report
#### Total: 19 (Unit: 6, Blackbox: 7, Graybox: 6)


### 2000001

| Name (1) | Link | Issue | Type |
| :--- | :---: | :---: | :---: |
| <h6>A</h6> | [testUnit.js](../test/jest/testUnit.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Unit |

<hr/>

### 1509100

| Name (1) | Link | Issue | Type |
| :--- | :---: | :---: | :---: |
| <h6>This is a blackbox list<br/>&nbsp;&nbsp;&nbsp;&nbsp; 1. thing 1<br/>&nbsp;&nbsp;&nbsp;&nbsp; 2. thing 2<br/>&nbsp;&nbsp;&nbsp;&nbsp; 3. \\\\*thing 3\\\\*<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 4. thing 4</h6> | [testBlackbox.js](../test/jest/testBlackbox.js#L15) | [TRACE-1000](https://jira2.cerner.com/browse/TRACE-1000) | Blackbox |

<hr/>

### 1000001

| Name (8) | Link | Issue | Type |
| :--- | :---: | :---: | :---: |
| <h6>BB</h6> | [testBlackbox.js](../test/jest/testBlackbox.js#L15) | [TRACE-1000](https://jira2.cerner.com/browse/TRACE-1000) | Blackbox |
| <h6>EE</h6> | [testBlackbox.js](../test/jest/testBlackbox.js#L15) | [TRACE-1000](https://jira2.cerner.com/browse/TRACE-1000) | Blackbox |
| <h6>G</h6> | [testWdio.js](../test/jest/testWdio.js#L3) | [TRACE-1003](https://jira2.cerner.com/browse/TRACE-1003) | Graybox |
| <h6>I</h6> | [testWdio.js](../test/jest/testWdio.js#L3) | [TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Graybox |
| <h6>J</h6> | [testWdio.js](../test/jest/testWdio.js#L3) | [TRACE-1003](https://jira2.cerner.com/browse/TRACE-1003) | Graybox |
| <h6>K</h6> | [testWdio.js](../test/jest/testWdio.js#L3) | [TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Graybox |
| <h6>L</h6> | [testWdio.js](../test/jest/testWdio.js#L3) | [TRACE-1003](https://jira2.cerner.com/browse/TRACE-1003) | Graybox |
| <h6>A</h6> | [testUnit.js](../test/jest/testUnit.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Unit |

<hr/>

### 1000000

| Name (9) | Link | Issue | Type |
| :--- | :---: | :---: | :---: |
| <h6>AA</h6> | [testBlackbox.js](../test/jest/testBlackbox.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Blackbox |
| <h6>CC</h6> | [testBlackbox.js](../test/jest/testBlackbox.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Blackbox |
| <h6>DD</h6> | [testBlackbox.js](../test/jest/testBlackbox.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Blackbox |
| <h6>FF</h6> | [testBlackbox.js](../test/jest/testBlackbox.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Blackbox |
| <h6>I</h6> | [testWdio.js](../test/jest/testWdio.js#L18) | [TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Graybox |
| <h6>A</h6> | [testUnit.js](../test/jest/testUnit.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Unit |
| <h6>C</h6> | [testUnit.js](../test/jest/testUnit.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Unit |
| <h6>D</h6> | [testUnit.js](../test/jest/testUnit.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Unit |
| <h6>F</h6> | [testUnit.js](../test/jest/testUnit.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Unit |

<hr/>"
`;

exports[`TracingReport splits multiple IDs into separate tests 1`] = `
"# Tracing Report
#### Total: 6 (Unit: 6)


### 2000001

| Name (1) | Link | Issue | Type |
| :--- | :---: | :---: | :---: |
| <h6>A</h6> | [testUnit.js](../test/jest/testUnit.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Unit |

<hr/>

### 1000001

| Name (1) | Link | Issue | Type |
| :--- | :---: | :---: | :---: |
| <h6>A</h6> | [testUnit.js](../test/jest/testUnit.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Unit |

<hr/>

### 1000000

| Name (4) | Link | Issue | Type |
| :--- | :---: | :---: | :---: |
| <h6>A</h6> | [testUnit.js](../test/jest/testUnit.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Unit |
| <h6>C</h6> | [testUnit.js](../test/jest/testUnit.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Unit |
| <h6>D</h6> | [testUnit.js](../test/jest/testUnit.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Unit |
| <h6>F</h6> | [testUnit.js](../test/jest/testUnit.js#L3) | [TRACE-1001](https://jira2.cerner.com/browse/TRACE-1001)<br/>[TRACE-1002](https://jira2.cerner.com/browse/TRACE-1002) | Unit |

<hr/>"
`;
